--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "vercel-build": "npm install --legacy-peer-deps && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -15,7 +16,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "react-latex-next": "^3.0.0",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
@@ -33,7 +33,7 @@
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   },
-  "resolutions": {
+  "overrides": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
