--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/node",
+      "use": "@vercel/static-build",
       "config": {
+        "distDir": "dist",
         "installCommand": "npm install --legacy-peer-deps"
       }
     }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
