notes structuring changes [splitting into 2 api calls]

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_GEMINI_API_KEY=AIzaSyAPaHR7dV0g2wOMzFZVG90OS8N11UUfRRs
-VITE_GEMINI_MODEL_VERSION=gemini-2.5-pro-exp-03-25
+VITE_GEMINI_MODEL_VERSION=gemini-2.0-flash
