--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "jsonrepair": "^3.12.0",
     "katex": "^0.16.22",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
