--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@tailwindcss/vite": "^4.1.4",
     "jsonrepair": "^3.12.0",
     "katex": "^0.16.22",
+    "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-katex": "^3.0.1",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.5.1",
     "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.4",
     "zod": "^3.24.3"
